Next step will be backtrack function

--- a/views/index.html
+++ b/views/index.html
@@ -26,6 +26,7 @@
         ></textarea>
         <br />
         <input type="button" value="Solve" id="solve-button"/>
+        <input type="button" value="Slow Solve" id="slow-solve-button"/>
         <div id="error-msg"></div>
         </form>
         <form id="check-form">
