--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
     <link id="favicon" rel="icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png" type="image/x-icon">
-	<link rel="stylesheet" href="../public/style.css" type="text/css" />
+	<link rel="stylesheet" href="public/style.css" type="text/css" />
 </head>
 
 <body>
@@ -26,7 +26,7 @@
         ></textarea>
         <br />
         <input type="button" value="Solve" id="solve-button"/>
-        <input type="button" value="Slow Solve" id="slow-solve-button"/>
+        <!--input type="button" value="Slow Solve" id="slow-solve-button"/-->
         <div id="error-msg"></div>
         </form>
         <form id="check-form">
@@ -352,5 +352,5 @@
       </div>
     </div>
   </body>
-  <script type="module" src="../public/index.js"></script>
+  <script type="module" src="public/index.js"></script>
 </html>
